--- a/Twitter_health_Team3_Part1_data_read_clean.ipynb
+++ b/Twitter_health_Team3_Part1_data_read_clean.ipynb
@@ -14,7 +14,7 @@
    "id": "8ae814a9-8ab1-4da4-aa0a-b694e7894d0c",
    "metadata": {},
    "source": [
-    "#### Project Description: the project task is to analyze health related tweets by 16 different media outlets (BBC, CBC, CBB, KaiserNews, etc), produced in the period of 2011 to 2015. Final task is to cluster the health tweets in order to determine various trends, such as dominating health news topic by media outlet, dominating health news trends through time period and other related trends. "
+    "#### Project Description: the project task is to analyze health related tweets by 16 different media outlets (BBC, CBC, CBB, KaiserNews, etc), produced in the period of 2011 to 2015. Final task is to compare various media outlets and determine various trends, such as dominating health news topic by media outlet, dominating health news trends through time period and other related trends. "
    ]
   },
   {
@@ -4204,9 +4204,9 @@
     "    tweet = ''\n",
     "    tweet_year = tweet+year\n",
     "    tweet_year = twitter_health[twitter_health['year'] == int(year)]\n",
-    "    PrvDel = 'PrvDel_'\n",
-    "    PrvDelYear = PrvDel+year+'.csv'   \n",
-    "    tweet_year.to_csv(PrvDelYear, index=False)"
+    "    PartOne = 'PartOne_'\n",
+    "    PartOneYear = PartOne+year+'.csv'   \n",
+    "    tweet_year.to_csv(PartOneYear, index=False)"
    ]
   },
   {
