--- a/Twitter_health_Team3_Part2_text_processing.ipynb
+++ b/Twitter_health_Team3_Part2_text_processing.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "List_of_all_files = ['PrvDel','PrvDel_2011','PrvDel_2012','PrvDel_2013','PrvDel_2014','PrvDel_2015']"
+    "List_of_all_files = ['PartOne_2011','PartOne_2012','PartOne_2013','PartOne_2014','PartOne_2015']"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Working_file = List_of_all_files[4] #Chose file for working"
+    "Working_file = List_of_all_files[3] #Chose file for working"
    ]
   },
   {
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "'PrvDel_2014'"
+       "'PartOne_2014'"
       ]
      },
      "execution_count": 6,
@@ -1388,7 +1388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('3097', 0.8452907204627991)\n"
+      "('435', 0.8780936598777771)\n"
      ]
     }
    ],
@@ -1408,7 +1408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('222', 0.9283543229103088)\n"
+      "('222', 0.9597722887992859)\n"
      ]
     }
    ],
@@ -1447,7 +1447,7 @@
     {
      "data": {
       "text/plain": [
-       "0.22969724237918854"
+       "0.3691364824771881"
       ]
      },
      "execution_count": 54,
@@ -2935,7 +2935,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25995/25995 [00:00<00:00, 210454.36it/s]\n"
+      "100%|██████████| 25995/25995 [00:00<00:00, 117093.40it/s]\n"
      ]
     }
    ],
@@ -3051,7 +3051,7 @@
        "      <td>4</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
-       "      <td>[-1.5214592218399048, -1.9642326831817627, 1.6...</td>\n",
+       "      <td>[0.08250287920236588, -2.3711700439453125, 2.6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3061,7 +3061,7 @@
        "      <td>5</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
-       "      <td>[-3.586998701095581, 1.1720514297485352, -0.50...</td>\n",
+       "      <td>[-2.8149335384368896, 2.150209426879883, 1.211...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3071,7 +3071,7 @@
        "      <td>5</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
-       "      <td>[-0.4932563006877899, 0.694156289100647, -0.79...</td>\n",
+       "      <td>[-0.39117875695228577, 0.5310998558998108, 0.0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3081,7 +3081,7 @@
        "      <td>2</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
-       "      <td>[-1.1649739742279053, -0.6549581289291382, 3.5...</td>\n",
+       "      <td>[-0.7252945303916931, -1.6841784715652466, 3.5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3091,7 +3091,7 @@
        "      <td>5</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
-       "      <td>[-0.0946076437830925, -0.8528304696083069, 1.4...</td>\n",
+       "      <td>[0.248702272772789, -1.1728663444519043, 1.994...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3106,11 +3106,11 @@
        "4  bbchealth  2014         plasma treatment uk ebola               5     12   \n",
        "\n",
        "   day_of_week                                            vectors  \n",
-       "0            2  [-1.5214592218399048, -1.9642326831817627, 1.6...  \n",
-       "1            2  [-3.586998701095581, 1.1720514297485352, -0.50...  \n",
-       "2            2  [-0.4932563006877899, 0.694156289100647, -0.79...  \n",
-       "3            1  [-1.1649739742279053, -0.6549581289291382, 3.5...  \n",
-       "4            1  [-0.0946076437830925, -0.8528304696083069, 1.4...  "
+       "0            2  [0.08250287920236588, -2.3711700439453125, 2.6...  \n",
+       "1            2  [-2.8149335384368896, 2.150209426879883, 1.211...  \n",
+       "2            2  [-0.39117875695228577, 0.5310998558998108, 0.0...  \n",
+       "3            1  [-0.7252945303916931, -1.6841784715652466, 3.5...  \n",
+       "4            1  [0.248702272772789, -1.1728663444519043, 1.994...  "
       ]
      },
      "execution_count": 97,
@@ -3139,7 +3139,7 @@
     {
      "data": {
       "text/plain": [
-       "'VtorDel_2014.csv'"
+       "'PartTwo_2014.csv'"
       ]
      },
      "execution_count": 98,
@@ -3148,7 +3148,7 @@
     }
    ],
    "source": [
-    "NewWorkingFileName = 'VtorDel_' + Working_file.split('_', 1)[1] + '.csv'\n",
+    "NewWorkingFileName = 'PartTwo_' + Working_file.split('_', 1)[1] + '.csv'\n",
     "NewWorkingFileName"
    ]
   },
